fix range btn size on mobile

--- a/src/components/Range/Range.scss
+++ b/src/components/Range/Range.scss
@@ -79,5 +79,9 @@
     &:hover {
       scale: 1.75;
     }
+
+    @media (max-width: $tablet) {
+      scale: 2;
+    }
   }
 }
